styles/sass/style.scss
/* ... */
.leg-tanner p {
  margin-left: 150px;
  margin-right: 150px;
}

.tanning-beds-intro {
  color: black;
  padding-bottom: 40px;
  text-align: center;
}

// .tanning-beds-intro p {
//   margin-left: 150px;
//   margin-right: 150px;
// }

.tanning-beds-intro h2 {
  padding-top: 200px;
  padding-bottom: 50px;
}

.tanning-beds-intro .header-image {
  background-image: url(../assets/images/beach-rocks-min.jpeg);
  height: 50vh;
  background-size: cover;
  background-position: 70% 40%;
  h2 {
    color: white;
  }
}

.tanning-beds-intro button {
  padding: 10px 30px;
  background-color: #333232;
  border: 2px solid #333232;
  border-radius: 10px;
  box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 0.2);
  margin: 20px;
}

.tanning-beds-intro .book-now {
  padding: 10px 65px;
}

.uv-free-tanning .book-now {
  padding: 10px 65px;
}

.tanning-beds-intro button a {
  text-decoration: none;
  color: white;
  text-transform: uppercase;
}

.tanning-beds-intro-text {
  background-color: white;
  border: 2px black solid;
  padding: 40px 80px;
  margin: 70px 200px 20px;
  line-height: 1.5;
  box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 0.2);
}

// .tanning-bed-list {
//   padding-left: 500px;
//   line-height: 2.5;
// }

.card {
  margin: 50px auto 50px;
  width: 350px;
  height: 450px;
}

.card-inner {
  width: 100%;
  height: 100%;
  transition: transform 1s;
  transform-style: preserve-3d;
  cursor: pointer;
  position: relative;
}

.card-inner.is-flipped {
  transform: rotateY(180deg);
}

.card-face {
  position: absolute;
  width: 100%;
  height: 100%;
  backface-visibility: hidden;
  overflow: hidden;
  overflow-y: scroll;
  border-radius: 16px;
  box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 0.2);
}


.card-front {
  background-image: linear-gradient(to bottom right, beige, lightcoral);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.card-front h5 {
  color: white;
  font-size: 30px;
  text-align: center;
}

.card-front p {
  font-size: 20px;
}

.card-back {
  background-color: white;
  transform: rotateY(180deg);
}

.card-content {
  width: 100%;
  height: 100%;
}

.card-header {
  position: relative;
  padding: 30px 30px 10px;
}

.card-header:after {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
  border-radius: 00 50% 0;
  background-image: linear-gradient(to bottom left, white 10%,  #ebd1d0 115%);
}

.card-image {
  display: block;
  width: 150px;
  height: 150px;
  margin: 0 auto 30px;
  border-radius: 20%;
  background-color: white;
  border: 5px solid white;
  object-fit: contain;
}


.card-header h2 {
  color: black;
  font-size: 16px;
  text-transform: uppercase;
  text-align: center;
  margin: 5px;
  padding-top: 0;
}

.card-body {
  padding: 10px;
}

.card-body h3 {
  color: black;
  font-size: 20px;
  margin: 5px;
}

.card-body p {
  font-size: 14px;
  color: black;
  line-height: 1.5;
}



// reviews
.reviews h2 {
  padding-top: 200px;
  padding-bottom: 50px;
}

.reviews .header-image {
  background-image: url('../assets/images/shifaaz-shamoon-sLAk1guBG90-unsplash-min.jpeg');
  height: 50vh;
  background-size: cover;
  h2 {
    color: white;
  }
}

//promotions
.promotions h2 {
  padding-top: 200px;
  padding-bottom: 50px;
}

.promotions .header-image {
  background-image: url(../assets/images/beach-rocks-min.jpeg);
  height: 50vh;
  background-size: cover;
  background-position: 70% 40%;
  h2 {
    color: white;
  }
}

.promotions .button {
  margin: 40px auto;
  text-align: center;
}

.promotions button {
  padding: 10px 30px;
  background-color: #333232;
  border: 2px solid #333232;
  border-radius: 10px;
  box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 0.2);
}

.promotions button a {
  text-decoration: none;
  color: white;
  text-transform: uppercase;
}

.regular-promotions {
  display: flex;
  justify-content: center;
}


.promotion{
  position: relative;
  width:400px;
  height:400px;
  border:2px solid white;
  margin: 20px;
}

.promotion:hover .image-overlay, .promotion:active .image-overlay {
  visibility: visible;
  opacity: 1;
}

.promotion:hover .title, .promotion:active .title {
  visibility: hidden;
}

.overlay-text {
  transition: .2s;
  transform: translateY(1em);
}

.promotion:hover .overlay-text {
  transform: translateY(0);
}

.overlay-text {
  padding: 0 20px;
  text-align: center;
  line-height: 1.5;
  .small-text {
    line-height: 1;
  }
}

.image-overlay{
  display:table;
  height:100%;
  background:rgba(0,0,0,0.5);
  width:100%;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  // background: rgba(36, 62, 206, 0.6);
  color: #fff;
  visibility: hidden;
  opacity: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: opacity .2s, visibility .2s;
}

.promotion h2 { 
  // margin: 0 auto;
  // font-size: 2.5em;
  text-align: center;
}

.promo1 {
  background-image: url('../assets/images/F4970B61-E20F-4549-9ED8-65FDC7FE59A3.png');
  background-size: cover;
  background-position: 10% 60%;
}

.promo2 {
  background-image: url('../assets/images/E12C29F6-2A6D-4E2A-A2A5-F0D1F17D358B.png');
  background-size: cover;
  background-position: 10% 60%;
}

.promo3 {
  background-image: url('../assets/images/pinkpapaya_010.jpeg');
  background-size: cover;
  background-position: 10% 60%;
}

.price-matching {
  background-color: #C19AA0;
  padding: 20px 100px 10px;
  margin: 50px 200px 30px;
  // border: 1px solid white;
  border-radius: 5px;
  box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 0.2);
}

.price-matching h2 {
  padding-top: 10px;
  padding-bottom: 10px;
  color: black;
}

.price-matching p {
  color: black;
  text-align: center;
}
/* ... */

